feat: Week-3.1 Class Code

--- a/ClassCode/week-3/index.html
+++ b/ClassCode/week-3/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="box">My name is Prakash</div>
-    <div>
-      <p>Hello world</p>
-      <h2 class="">
-        
-      </h2>
+    <div id="parent">
+      <p class="child child-1">1</p>
+      <p class="child child-2">2</p>
+      <p class="child child-3">3</p>
+      <p class="child child-4">4</p>
+      <p class="child child-5">5</p>
     </div>
   </body>
 </html>
