Refactor code structure for improved readability and maintainability

--- a/assignments/week-3/cursor-landing/index.html
+++ b/assignments/week-3/cursor-landing/index.html
@@ -82,43 +82,366 @@
         </div>
 
         <div class="feature-img">
-          <img src="assets/features/agent.png" alt="Agent feature" />
+          <img src="assets/feature-1.png" alt="Agent feature" />
         </div>
-      </div>
-
-      <!-- Feature 2 (REVERSED) -->
-      <div class="feature feature--reverse">
-        <div class="feature__content">
+      <div class="feature">
+        <div class="feature-content">
           <h3>Magically accurate autocomplete</h3>
           <p>
-            Our custom-trained model predicts your next action with startling
-            speed and precision.
+           Our custom Tab model predicts your next action with striking speed and precision.
           </p>
-          <a href="#" class="feature__link">Learn more →</a>
+          <a href="#" class="feature-link">Learn about Tab →</a>
         </div>
 
-        <div class="feature__media">
-          <img
-            src="assets/features/autocomplete.png"
-            alt="Autocomplete feature"
-          />
+        <div class="feature-img">
+          <img src="assets/feature-img2.png" alt="Agent feature" />
         </div>
       </div>
-
-      <!-- Feature 3 -->
       <div class="feature">
-        <div class="feature__content">
-          <h3>Build everywhere</h3>
+        <div class="feature-content">
+          <h3>Everywhere software gets built</h3>
           <p>
-            Cursor runs on macOS, Windows, and Linux, so you can build anywhere.
+           Cursor is in GitHub reviewing your PRs, a teammate in Slack, and anywhere else you work.
           </p>
-          <a href="#" class="feature__link">Download →</a>
+          <a href="#" class="feature-link">Learn about Cursor's ecosystem →</a>
         </div>
 
-        <div class="feature__media">
-          <img src="assets/features/cross-platform.png" alt="Cross platform" />
+        <div class="feature-img">
+          <img src="assets/feature-img2.png" alt="Agent feature" />
         </div>
       </div>
     </section>
+    <section class="testimonials">
+  <h2 class="testimonials-title">
+    The new way to build software.
+  </h2>
+
+  <div class="testimonials-grid">
+
+    <!-- Card 1 -->
+    <div class="testimonial-card">
+      <p>
+        It was night and day from one batch to another, adoption went from
+        single digits to over 80%. It just spread like wildfire, all the best
+        builders were using Cursor.
+      </p>
+
+      <div class="testimonial-author">
+        <img src="assets/people/diana-hu-avatar.png" alt="Diana Hu" />
+        <div>
+          <strong>Diana Hu</strong>
+          <span>General Partner, Y Combinator</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="testimonial-card">
+      <p>
+        The most useful AI tool that I currently pay for, hands down, is Cursor.
+        It's fast, autocompletes when and where you need it to, handles brackets
+        properly, and brings everything together.
+      </p>
+
+      <div class="testimonial-author">
+        <img src="assets/people/shadcn-avatar.png" alt="shadcn" />
+        <div>
+          <strong>shadcn</strong>
+          <span>Creator of shadcn/ui</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="testimonial-card">
+      <p>
+        The best LLM applications have an autonomy slider: you control how much
+        independence to give the AI. Cursor gets this balance exactly right.
+      </p>
+
+      <div class="testimonial-author">
+        <img src="assets/people/andrej-karpathy-avatar.png" alt="Andrej Karpathy" />
+        <div>
+          <strong>Andrej Karpathy</strong>
+          <span>CEO, Eureka Labs</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 4 -->
+    <div class="testimonial-card">
+      <p>
+        Cursor quickly grew from hundreds to thousands of extremely enthusiastic
+        Stripe employees. We spend more on R&D than any other undertaking, and
+        making this process more efficient matters.
+      </p>
+
+      <div class="testimonial-author">
+        <img src="assets/people/patrick-collison-avatar.png" alt="Patrick Collison" />
+        <div>
+          <strong>Patrick Collison</strong>
+          <span>Co-Founder & CEO, Stripe</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 5 -->
+    <div class="testimonial-card">
+      <p>
+        It's official.  
+        <br /><br />
+        I hate vibe coding.  
+        I love Cursor tab coding.  
+        <br /><br />
+        It's wild.
+      </p>
+
+      <div class="testimonial-author">
+        <img src="assets/people/theprimeagen-avatar.png" alt="ThePrimeagen" />
+        <div>
+          <strong>ThePrimeagen</strong>
+          <span>@ThePrimeagen</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 6 -->
+    <div class="testimonial-card">
+      <p>
+        It's definitely becoming more fun to be a programmer. It's less about
+        digging through pages and more about what you want to happen. Cursor is
+        where models like GPT-5 shine brightest.
+      </p>
+
+      <div class="testimonial-author">
+        <img src="assets/people/greg-brockman-avatar.webp" alt="Greg Brockman" />
+        <div>
+          <strong>Greg Brockman</strong>
+          <span>President, OpenAI</span>
+        </div>
+      </div>
+    </div>
+
+  </div>
+    </section>
+    <section class="stories">
+      <h2 class="story-title">
+        Stay on the frontier
+      </h2>
+      <div class="story-grid">
+      <div class="story-card">
+      <h3>Access the best models</h3>
+      <p>
+        Choose between every cutting-edge model from
+        OpenAI, Anthropic, Gemini, and xAI.
+      </p>
+      <a href="#">Explore models →</a>
+
+      <div class="story-media">
+        <img src="assets/stories/model1.png" alt="Model selector" />
+      </div>
+    </div>
+     <div class="story-card">
+      <h3>Complete codebase understanding</h3>
+      <p>
+        Cursor learns how your codebase works,
+        no matter the scale or complexity.
+      </p>
+      <a href="#">Learn about semantic search →</a>
+
+      <div class="story-media">
+        <img src="assets/stories/model2.png" alt="Semantic search" />
+      </div>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="story-card">
+      <h3>Develop enduring software</h3>
+      <p>
+        Trusted by over half of the Fortune 500 to
+        accelerate development, securely and at scale.
+      </p>
+      <a href="#">Explore enterprise →</a>
+
+      <div class="story-media">
+        <img src="assets/stories/model3.png" alt="Enterprise dashboard" />
+      </div>
+    </div>
+    </div>
+    </section>
+
+    <section class="changelog">
+  <h2 class="changelog-title">Changelog</h2>
+
+  <div class="changelog-grid">
+
+    <div class="changelog-card">
+      <div class="changelog-meta">
+        <span class="changelog-version">2.4</span>
+        <span class="changelog-date">Jan 22, 2026</span>
+      </div>
+      <h3>Subagents, Skills, and Image Generation</h3>
+    </div>
+
+    <div class="changelog-card">
+      <div class="changelog-meta">
+        <span class="changelog-date">Jan 16, 2026</span>
+      </div>
+      <h3>CLI Agent Modes and Cloud Handoff</h3>
+    </div>
+
+    <div class="changelog-card">
+      <div class="changelog-meta">
+        <span class="changelog-date">Jan 8, 2026</span>
+      </div>
+      <h3>New CLI Features and Improved CLI Performance</h3>
+    </div>
+
+    <div class="changelog-card">
+      <div class="changelog-meta">
+        <span class="changelog-version">2.3</span>
+        <span class="changelog-date">Dec 22, 2025</span>
+      </div>
+      <h3>Layout Customization and Stability Improvements</h3>
+    </div>
+
+  </div>
+
+  <a href="#" class="changelog-link">See what’s new in Cursor →</a>
+</section>
+<section class="careers">
+  <div class="careers-content">
+    <h2>
+      Cursor is an applied team focused<br />
+      on building the future of coding.
+    </h2>
+
+    <a href="#" class="careers-cta">Join us →</a>
+  </div>
+
+  <div class="careers-image">
+    <img src="assets/homepage-team-photo.webp" alt="Cursor team working together" />
+  </div>
+</section>
+<section class="highlights">
+  <div class="highlights-layout">
+
+    <div class="highlights-title">
+      <h2>Recent highlights</h2>
+    </div>
+
+
+    <div class="highlights-list">
+
+      <article class="highlight-card">
+        <h3>Introducing Cursor 2.0 and Composer</h3>
+        <p>
+          A new interface and our first coding model, both purpose-built
+          for working with agents.
+        </p>
+        <span class="highlight-meta">Product · Oct 29, 2025</span>
+      </article>
+
+      <article class="highlight-card">
+        <h3>Improving Cursor Tab with online RL</h3>
+        <p>
+          Our new Tab model makes 21% fewer suggestions while having
+          28% higher accept rate.
+        </p>
+        <span class="highlight-meta">Research · Sep 12, 2025</span>
+      </article>
+
+      <article class="highlight-card">
+        <h3>1.5× faster MoE training with custom MXFP8 kernels</h3>
+        <p>
+          Achieving a 3.5× MoE layer speedup with a complete rebuild
+          for Blackwell GPUs.
+        </p>
+        <span class="highlight-meta">Research · Aug 29, 2025</span>
+      </article>
+
+      <a href="#" class="highlights-link">View more posts →</a>
+
+    </div>
+  </div>
+</section>
+<section class="final-cta">
+  <div class="heading">
+    <h1>
+      Try Cursor now.
+    </h1>
+  </div>
+  <button class="download">
+    Download for Windows ⤓ 
+  </button>
+</section>
+<footer class="footer">
+  <div class="footer-grid">
+
+    <div class="footer-col">
+      <h4>Product</h4>
+      <a href="#">Features</a>
+      <a href="#">Enterprise</a>
+      <a href="#">Web Agents</a>
+      <a href="#">Bugbot</a>
+      <a href="#">CLI</a>
+      <a href="#">Pricing</a>
+    </div>
+
+    <div class="footer-col">
+      <h4>Resources</h4>
+      <a href="#">Download</a>
+      <a href="#">Changelog</a>
+      <a href="#">Docs</a>
+      <a href="#">Learn</a>
+      <a href="#">Forum</a>
+      <a href="#">Status</a>
+    </div>
+
+    <div class="footer-col">
+      <h4>Company</h4>
+      <a href="#">Careers</a>
+      <a href="#">Blog</a>
+      <a href="#">Community</a>
+      <a href="#">Workshops</a>
+      <a href="#">Students</a>
+      <a href="#">Brand</a>
+    </div>
+
+    <div class="footer-col">
+      <h4>Legal</h4>
+      <a href="#">Terms of Service</a>
+      <a href="#">Privacy Policy</a>
+      <a href="#">Data Use</a>
+      <a href="#">Security</a>
+    </div>
+
+    <div class="footer-col">
+      <h4>Connect</h4>
+      <a href="#">X</a>
+      <a href="#">LinkedIn</a>
+      <a href="#">YouTube</a>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    <div class="footer-meta">
+      <span>© 2026 Cursor</span>
+      <span>✔ SOC 2 Certified</span>
+    </div>
+
+    <div class="footer-actions">
+      <button class="icon-btn">🖥</button>
+      <button class="icon-btn">☀</button>
+      <button class="icon-btn">🌙</button>
+
+      <button class="lang-btn">
+        🌐 English ▾
+      </button>
+    </div>
+  </div>
+</footer>
+
   </body>
 </html>
