--- a/ClassCode/week-3/T-class/index.html
+++ b/ClassCode/week-3/T-class/index.html
@@ -5,7 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/style.css" rel="stylesheet" />
   </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+
+  <body class="bg-orange-50 dark:bg-neutral-950 p-6">
+    <h1 class="text-7xl font-bold underline text-black dark:text-white">
+      Hello world!
+    </h1>
+
+    <div class="flex items-center">
+      <p class="text-5xl font-semibold text-blue-500 dark:text-blue-300">
+        Hitesh For You
+      </p>
+
+      <img
+        src="https://chaicode.com/assets/white-1-CYshgcRl.webp"
+        alt="dark"
+        class="size-64 hidden dark:block"
+      />
+    </div>
   </body>
 </html>
